--- a/subject/makefile
+++ b/subject/makefile
@@ -1,7 +1,11 @@
-CODING=
+g=g++
+prom=3_1952560_安江涛.out
+source=3_1952560_安江涛.cpp
 
-all:
-	
 	g++ -std=c++11 -fexec-charset=UTF-8 -static-libgcc -static-libstdc++ p1.cpp -o p1.exe
-	g++ -std=c++11 p2.cpp -o p2.exe
-compile:
+$(prom):$(source)
+	$(g) -std=c++11 -static-libgcc -static-libstdc++ -o $(prom)  $(source)
+.PHONY: 
+	clean
+clean:
+	rm -f *.out
